[gd_scene load_steps=26 format=3 uid="uid://da5bl5to0744s"]

[ext_resource type="Texture2D" uid="uid://cdqn6sr4qw4lb" path="res://Sprites/menus/window-base-framing/base.png" id="1_4xfno"]
[ext_resource type="Script" path="res://Scripts/level_one_minigame.gd" id="1_nw7f2"]
[ext_resource type="Texture2D" uid="uid://dg2muivq2qse" path="res://Sprites/customers/mouth/mouth1.png" id="2_y1j77"]
[ext_resource type="Texture2D" uid="uid://kt0ojgsfjaj0" path="res://Sprites/customers/mouth/mouth2.png" id="3_l4kab"]
[ext_resource type="Texture2D" uid="uid://wql46r51slnu" path="res://Sprites/customers/mouth/mouth3.png" id="4_vns2t"]
[ext_resource type="Texture2D" uid="uid://d4ebkci72eua3" path="res://Sprites/customers/mouth/mouth4.png" id="5_hymdc"]
[ext_resource type="Texture2D" uid="uid://dtxbodqhs6yj2" path="res://Sprites/customers/mouth/mouth5.png" id="6_70j7y"]
[ext_resource type="Texture2D" uid="uid://dmhe7bdhl07lg" path="res://Sprites/customers/mouth/mouth6.png" id="7_8ego1"]
[ext_resource type="Texture2D" uid="uid://cxbxoxbviln1d" path="res://Sprites/customers/mouth/mouth7.png" id="8_l0ud5"]
[ext_resource type="PackedScene" uid="uid://lw27vvo06xbg" path="res://Scenes/tooth.tscn" id="9_irj73"]
[ext_resource type="Script" path="res://Scripts/tooth.gd" id="10_3mjx8"]
[ext_resource type="Script" path="res://Scripts/tooth2.gd" id="11_gap6b"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iwrny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4xfno")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nr125"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y1j77")
}, {
"duration": 1.0,
"texture": ExtResource("3_l4kab")
}, {
"duration": 1.0,
"texture": ExtResource("4_vns2t")
}, {
"duration": 1.0,
"texture": ExtResource("5_hymdc")
}, {
"duration": 1.0,
"texture": ExtResource("6_70j7y")
}, {
"duration": 1.0,
"texture": ExtResource("7_8ego1")
}, {
"duration": 1.0,
"texture": ExtResource("8_l0ud5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_y0bny"]

[sub_resource type="CircleShape2D" id="CircleShape2D_avaek"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eedsr"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dmmj4"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_goar8"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ccisr"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_bqi2d"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wj2ua"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vpbiu"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_otphr"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_02cqb"]
radius = 6.0

[node name="Level One Minigame" type="Node2D"]
script = ExtResource("1_nw7f2")

[node name="Frame" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 144)
sprite_frames = SubResource("SpriteFrames_iwrny")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 164)
sprite_frames = SubResource("SpriteFrames_nr125")

[node name="Teeth" type="Node2D" parent="."]

[node name="Tooth" parent="Teeth" instance=ExtResource("9_irj73")]
position = Vector2(72, 202)
animation = &"1"
frame = 1
script = ExtResource("10_3mjx8")

[node name="StaticBody2D" type="StaticBody2D" parent="Teeth/Tooth"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_y0bny")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Teeth/Tooth/StaticBody2D"]
polygon = PackedVector2Array(-6, -18, -8, -19, -8, -22, -1, -27, -3, -32, -1, -37, -2, -40, -2, -44, -15, -46, -18, -41, -21, -41, -23, -45, -20, -52, 5, -50, 7, -44, 6, -41, 12, -34, 12, -28, 10, -26, 16, -21, 15, -16, 11, -13, 16, -7, 14, 10, 7, 9, 7, 12, 13, 15, 13, 25, 10, 30, 14, 35, 13, 43, 14, 49, 13, 54, 7, 57, 4, 57, -1, 57, -8, 57, -8, 52, -6, 49, -3, 43, -2, 39, -6, 33, -4, 29, 0, 27, 0, 19, -3, 14, -7, 13, -8, 11, -4, 3, -2, 0, 1, -1, 0, -4, -2, -7, -3, -10, -4, -13, -6, -15, -7, -17)

[node name="StaticBody2D2" type="StaticBody2D" parent="Teeth/Tooth"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth/StaticBody2D2"]
position = Vector2(3, 50)
shape = SubResource("CircleShape2D_avaek")

[node name="StaticBody2D3" type="StaticBody2D" parent="Teeth/Tooth"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth/StaticBody2D3"]
position = Vector2(5, 38)
shape = SubResource("CircleShape2D_eedsr")

[node name="StaticBody2D4" type="StaticBody2D" parent="Teeth/Tooth"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth/StaticBody2D4"]
position = Vector2(6, 21)
shape = SubResource("CircleShape2D_dmmj4")

[node name="StaticBody2D5" type="StaticBody2D" parent="Teeth/Tooth"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth/StaticBody2D5"]
position = Vector2(8, -5)
shape = SubResource("CircleShape2D_goar8")

[node name="StaticBody2D6" type="StaticBody2D" parent="Teeth/Tooth"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth/StaticBody2D6"]
position = Vector2(4, -20)
shape = SubResource("CircleShape2D_ccisr")

[node name="Tooth2" parent="Teeth" instance=ExtResource("9_irj73")]
position = Vector2(94, 153)
animation = &"2"
frame = 1
script = ExtResource("11_gap6b")

[node name="StaticBody2D" type="StaticBody2D" parent="Teeth/Tooth2"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Teeth/Tooth2/StaticBody2D"]
polygon = PackedVector2Array(-12, -51, -14, -47, -15, -42, -12, -37, -11, -35, -12, -32, -11, -27, -9, -23, -8, -21, -9, -13, -10, -10, -1, -2, -1, 5, 3, 10, 2, 18, 4, 19, 12, 19, 4, 27, 5, 37, 13, 44, 16, 40, 14, 37, 12, 36, 11, 33, 16, 31, 23, 21, 22, 17, 19, 13, 15, 11, 13, 11, 10, 4, 11, -3, 8, -8, 4, -10, 2, -14, 7, -19, 8, -35, 7, -39, 5, -42, 5, -44, 7, -47, 6, -51, 3, -52, 0, -52, -3, -52, -8, -52)

[node name="StaticBody2D2" type="StaticBody2D" parent="Teeth/Tooth2"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth2/StaticBody2D2"]
position = Vector2(-4, -42)
shape = SubResource("CircleShape2D_bqi2d")

[node name="StaticBody2D3" type="StaticBody2D" parent="Teeth/Tooth2"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth2/StaticBody2D3"]
position = Vector2(17, 20)
shape = SubResource("CircleShape2D_wj2ua")

[node name="StaticBody2D4" type="StaticBody2D" parent="Teeth/Tooth2"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth2/StaticBody2D4"]
position = Vector2(5, -1)
shape = SubResource("CircleShape2D_vpbiu")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="StaticBody2D5" type="StaticBody2D" parent="Teeth/Tooth2"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth2/StaticBody2D5"]
position = Vector2(8, 14)
shape = SubResource("CircleShape2D_otphr")

[node name="StaticBody2D6" type="StaticBody2D" parent="Teeth/Tooth2"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teeth/Tooth2/StaticBody2D6"]
position = Vector2(0, -25)
shape = SubResource("CircleShape2D_02cqb")

[connection signal="mouse_entered" from="Teeth/Tooth/StaticBody2D" to="Teeth/Tooth" method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="Teeth/Tooth/StaticBody2D" to="Teeth/Tooth" method="_on_static_body_2d_mouse_exited"]
[connection signal="mouse_entered" from="Teeth/Tooth/StaticBody2D2" to="Teeth/Tooth" method="_on_static_body_2d_2_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth/StaticBody2D3" to="Teeth/Tooth" method="_on_static_body_2d_3_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth/StaticBody2D4" to="Teeth/Tooth" method="_on_static_body_2d_4_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth/StaticBody2D5" to="Teeth/Tooth" method="_on_static_body_2d_5_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth/StaticBody2D6" to="Teeth/Tooth" method="_on_static_body_2d_6_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth2/StaticBody2D" to="Teeth/Tooth2" method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="Teeth/Tooth2/StaticBody2D" to="Teeth/Tooth2" method="_on_static_body_2d_mouse_exited"]
[connection signal="mouse_entered" from="Teeth/Tooth2/StaticBody2D2" to="Teeth/Tooth2" method="_on_static_body_2d_2_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth2/StaticBody2D3" to="Teeth/Tooth2" method="_on_static_body_2d_3_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth2/StaticBody2D4" to="Teeth/Tooth2" method="_on_static_body_2d_4_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth2/StaticBody2D5" to="Teeth/Tooth2" method="_on_static_body_2d_5_mouse_entered"]
[connection signal="mouse_entered" from="Teeth/Tooth2/StaticBody2D6" to="Teeth/Tooth2" method="_on_static_body_2d_6_mouse_entered"]
